// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/PinPostSearchHint should match snapshot, with data retention 1`] = `
<Fragment>
  <ul>
    <li>
      <FormattedMessage
        defaultMessage="There are no pinned messages yet."
        id="search_results.usagePin1"
        values={Object {}}
      />
    </li>
    <li>
      <FormattedMessage
        defaultMessage="All members of this channel can pin important or useful messages."
        id="search_results.usagePin2"
        values={Object {}}
      />
    </li>
    <li>
      <FormattedMessage
        defaultMessage="Pinned messages are visible to all channel members."
        id="search_results.usagePin3"
        values={Object {}}
      />
    </li>
    <li>
      <FormattedMessage
        defaultMessage="To pin a message: Go to the message that you want to pin and click [...] > \\"Pin to channel\\"."
        id="search_results.usagePin4"
        values={Object {}}
      />
    </li>
    <DataRetentionHint
      dataRetentionMessageRetentionDays="30"
    />
  </ul>
</Fragment>
`;

exports[`components/PinPostSearchHint should match snapshot, without data retention 1`] = `
<Fragment>
  <ul>
    <li>
      <FormattedMessage
        defaultMessage="There are no pinned messages yet."
        id="search_results.usagePin1"
        values={Object {}}
      />
    </li>
    <li>
      <FormattedMessage
        defaultMessage="All members of this channel can pin important or useful messages."
        id="search_results.usagePin2"
        values={Object {}}
      />
    </li>
    <li>
      <FormattedMessage
        defaultMessage="Pinned messages are visible to all channel members."
        id="search_results.usagePin3"
        values={Object {}}
      />
    </li>
    <li>
      <FormattedMessage
        defaultMessage="To pin a message: Go to the message that you want to pin and click [...] > \\"Pin to channel\\"."
        id="search_results.usagePin4"
        values={Object {}}
      />
    </li>
  </ul>
</Fragment>
`;
